--- a/_posts/07-02-01-Errors.md
+++ b/_posts/07-02-01-Errors.md
@@ -1,11 +1,12 @@
 ---
+title: Greške
 isChild: true
 ---
 
-## Errors {#errors_title}
+## Greške {#errors_title}
 
-PHP has several levels of error severity. The three most common types of messages are errors, notices and warnings. These have different levels of severity; `E_ERROR`, `E_NOTICE`, and `E_WARNING`. Errors are fatal run-time errors and are usually caused by faults in your code and need to be fixed as they'll cause PHP to stop executing. Warnings are non-fatal errors, execution of the script will not be halted. Notices are advisory messages caused by code that may or may not cause problems during the execution of the script, execution is not halted. 
+PHP ima nekoliko nivoa ozbiljnosti grešaka. Tri najčešća tipa poruka su greške, obaveštenja i upozorenja. One imaju tri različita nivoa ozbiljnosti: `E_ERROR`, `E_NOTICE` i `E_WARNING`. Greške su fatalne greške tokom izvršavanja i obično su prouzrokovane greškama u vašem kodu. Greške takve vrste se moraju popraviti jer one zaustavljaju izvršavanje PHP-a. Upozorenja nisu fatalne greške, izvršavanje skripte neće biti zaustavljeno. Obaveštenja su savetodavne poruke prouzrokovane kodom koji može, ali ne mora da izazove probleme tokom izvršavanja, samim tim izvršavanje nije prekinuto.
 
-Another type of error message reported at compile time is the `E_STRICT` message, these messages are used to suggest changes to your code to help ensure best interoperability and forward compatibility for your code.  
+Drugi tip poruke grešaka koje se dobijaju za vreme kompiliranja je `E_STRICT`. Ove poruke se koriste da bi se predložile promene vašeg koda, kako bi kod bio kompitabilan u budućnosti.
 
-* [Predefined Constants for Error Handling](http://www.php.net/manual/en/errorfunc.constants.php)
+* [Predefinisane konstante za rukovanje sa greškama](http://www.php.net/manual/en/errorfunc.constants.php)
